--- a/src/views/partials/profile_add_column.hbs
+++ b/src/views/partials/profile_add_column.hbs
@@ -17,16 +17,17 @@
             <label for="iframe">Inserte el iframe de su columna</label>
 
             <input id="iframe" class="n-input" type="text" name="iframe" placeholder="Inserte el Iframe de Youtube">
+
+            <label for="content">Escriba el cuerpo de la noticia</label>
             <textarea class="photo-input" name="content" id="editor"></textarea>
 
-            <button onclick="openCropper()" style="background-color: rgb(255, 0, 106);" class="B-B-Submit-block">BUSCAR
+            <button onclick="openCropper()" style="background-color: rgb(255, 0, 106);" class="B-B-submit-block">BUSCAR
                 IMAGEN</button>
-
             <div class="result-container">
                 <div id="img-preview-container" class="img-preview-container">
                 </div>
             </div>
-            <button id='sendEditorData' class=" B-B-Submit-block">SUBIR COLUMNA</button>
+            <button id='sendEditorData' class=" B-B-submit-block">SUBIR COLUMNA</button>
         </div>
     </div>
 </div>
