--- a/src/views/partials/profile_add_new.hbs
+++ b/src/views/partials/profile_add_new.hbs
@@ -34,17 +34,18 @@
 
 
 
+            <label for="content">Escriba el cuerpo de la noticia</label>
 
             <textarea class="photo-input" name="content" id="editor"></textarea>
 
-            <button onclick="openCropper()" style="background-color: rgb(255, 0, 106);" class="B-B-Submit-block">BUSCAR
+            <button onclick="openCropper()" style="background-color: rgb(255, 0, 106);" class="B-B-submit-block">BUSCAR
                 IMAGEN</button>
 
             <div class="result-container">
                 <div id="img-preview-container" class="img-preview-container">
                 </div>
             </div>
-            <button id='sendEditorData' class=" B-B-Submit-block">SUBIR NOTICIA</button>
+            <button id='sendEditorData' class=" B-B-submit-block">SUBIR NOTICIA</button>
         </div>
     </div>
 </div>
