--- a/src/views/partials/profile_iframe.hbs
+++ b/src/views/partials/profile_iframe.hbs
@@ -24,7 +24,7 @@
                 <iframe width="150px" height="150px" src="https://www.youtube.com/embed/{{video_id}}" frameborder="0"
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
                 </iframe>
-                <button>Borrar</button>
+                <button style="width:100%">Borrar</button>
             </form>
             {{/each}}
             {{/if}}
