--- a/src/views/partials/profile_edit_column.hbs
+++ b/src/views/partials/profile_edit_column.hbs
@@ -19,17 +19,18 @@
                 value="{{column.description}}" placeholder="Escriba una descripción">{{column.description}}</textarea>
             <label for="iframe">Inserte el iframe de su columna</label>
             <input id="iframe" class="n-input" type="text" name="iframe" placeholder="Inserte el Iframe de Youtube">
+            <label for="content">Escriba el cuerpo de la noticia</label>
 
             <textarea class="photo-input" name="content" id="editor">{{column.body}}</textarea>
             <input type="hidden" id="thumbnail" name="thumbnail" value="{{column.thumbnail}}">
-            <button onclick="openCropper()" style="background-color: rgb(255, 0, 106);" class="B-B-Submit-block">BUSCAR
+            <button onclick="openCropper()" style="background-color: rgb(255, 0, 106);" class="B-B-submit-block">BUSCAR
                 IMAGEN</button>
 
             <div class="result-container">
                 <div id="img-preview-container" class="img-preview-container">
                 </div>
             </div>
-            <button id='sendEditorData' class=" B-B-Submit-block">EDITAR COLUMNA</button>
+            <button id='sendEditorData' class=" B-B-submit-block">EDITAR COLUMNA</button>
         </div>
     </div>
 </div>
