--- a/src/views/partials/profile_change_social.hbs
+++ b/src/views/partials/profile_change_social.hbs
@@ -4,8 +4,11 @@
         <h2 class="Udatos-title">Modificar Redes</h2>
         <form id="form" class="form-flex" action="/users/social/modify?_method=PUT" method="POST">
             <input type="hidden" name="_method" value="PUT">
+            <label for="insta">Escriba su dirección de INSTAGRAM</label>
             <input id="insta" class="p-input" type="text" name="insta" placeholder="Inserte su direccion de INSTAGRAM">
+            <label for="face">Escriba su dirección de FACEBOOK</label>
             <input id="face" class="p-input" type="text" name="face" placeholder="Inserte su dirección de FACEBOOK">
+            <label for="twit">Escriba su dirección de TWITTER</label>
             <input id="twit" class="p-input" type="text" name="twit" placeholder="Inserte su dirección de TWITTER">
             <button id="sender" class="B-B-Submit" type="submit">MODIFICAR REDES</button>
         </form>
