--- a/src/views/partials/profile_sidebar.hbs
+++ b/src/views/partials/profile_sidebar.hbs
@@ -3,9 +3,11 @@
                 <img src="{{user.photo}}" alt="" class=" user-img">
         </div>
         <ul class="sidebar-menu">
+                {{#if user.admin}}
                 <li class="menu-option"> <i class="fas fa-users"></i><a href="/admin/allusers"
                                 class="bright menu-link">Todos los
                                 Usuarios</a></li>
+                {{/if}}
                 <li class="menu-option"> <i class="fas fa-user"></i> <a href="/admin/profile"
                                 class="bright menu-link">Perfil
                                 de
@@ -14,13 +16,16 @@
                 <li class="nested menu-option"> <a href="/admin/changepass" class="menu-link">Contaseña</a></li>
                 <li class="nested menu-option"> <a href="/admin/changesocial" class="menu-link">Redes</a></li>
                 <li class="nested menu-option"> <a href="/admin/changephoto" class="menu-link">Foto</a></li>
+                {{#if user.admin}}
                 <li class="menu-option"><i class="far fa-newspaper"></i> <a href="/admin/allnews"
                                 class="bright menu-link">Todas las
                                 Noticias</a></li>
+                {{/if}}
                 <li class="menu-option"><i class="fas fa-newspaper"></i> <a href="/admin/usernews"
                                 class="bright menu-link">Noticias
                                 Publicadas</a></li>
                 <li class="nested menu-option"> <a href="/admin/addnew" class="menu-link">Nueva Noticia</a></li>
+                {{#if user.admin}}
                 <li class="menu-option"> <i class="fas fa-broadcast-tower"></i> <a href="/admin/allcolumns"
                                 class="bright menu-link">Columnas</a></li>
                 <li class="nested menu-option"> <a href="/admin/addcolumn" class="menu-link">Nueva Columna</a></li>
@@ -31,5 +36,22 @@
                 <li class="menu-option"> <i class="fas fa-microphone-alt"></i> <a href="/admin/iframes"
                                 class="bright menu-link">Iframe de
                                 Podcast</a></li>
+                {{/if}}
+
+                {{#if user.editor}}
+                <li class="menu-option"> <i class="fas fa-broadcast-tower"></i> <a href="/admin/allcolumns"
+                                class="bright menu-link">Columnas</a></li>
+                <li class="nested menu-option"> <a href="/admin/addcolumn" class="menu-link">Nueva Columna</a></li>
+                <li class="menu-option"> <i class="fab fa-youtube"></i> <a href="/admin/emitions"
+                                class="bright menu-link">Emisiones</a>
+                </li>
+                <li class="nested menu-option"> <a href="addemition" class="menu-link">Nueva Emision</a></li>
+                <li class="menu-option"> <i class="fas fa-microphone-alt"></i> <a href="/admin/iframes"
+                                class="bright menu-link">Iframe de
+                                Podcast</a></li>
+                {{/if}}
+
+
+
         </ul>
 </div>
