--- a/src/public/style.css
+++ b/src/public/style.css
@@ -544,7 +544,8 @@ a {
 
 .form-flex {
     margin: unset;
-    height: 60%;
+    padding: 1vh 0 5vh 0;
+    height: auto;
     width: 80%;
     justify-self: center;
     display: flex;
@@ -683,12 +684,13 @@ a {
 }
 
 .button-group {
-    margin-top: 4%;
+    margin-top: 9vh;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    width: 90%;
+    width: 100%;
     height: 1.5rem;
+    margin-bottom: 15vh;
 }
 
 .img-preview-container {
