--- a/src/views/all_news.hbs
+++ b/src/views/all_news.hbs
@@ -57,83 +57,83 @@
                     <span>Por <strong>{{author}}</strong></span>
                 </div>
 
-                <style>
-                    .button-container {
-                        height: auto;
-                        width: 100%;
-                        display: flex;
-                        justify-content: center;
-                    }
-
-                    button {
-                        cursor: pointer;
-                        border: none;
-                        background: crimson;
-                        color: white;
-                        width: 40vw;
-                        min-width: 300px;
-                        min-height: 50px;
-                        height: 10vh;
-                        font-weight: bold;
-                        font-size: 150%;
-                        margin: 5% auto;
-                        position: relative;
-                        transition: all 0.3s ease-in-out;
-                    }
-
-                    button:hover {
-                        background-color: rgb(220, 20, 80);
-                        border: 1px solid rgba(46, 184, 218, 0.63);
-                    }
-
-                    button:focus {
-                        outline: none;
-
-                    }
-
-
-                    strong {
-                        font-weight: bold;
-                    }
-
-                    .info {
-                        object-fit: cover;
-                        display: flex;
-                        flex-flow: column;
-                        justify-content: space-between;
-                        position: relative;
-                        min-height: 37%;
-                    }
-
-                    .author {
-                        font-size: 80%;
-                        color: white;
-                        display: flex;
-                        flex-flow: row;
-                        justify-content: ;
-                        align-items: center;
-                    }
-
-                    .author_container {
-                        height: 2rem;
-                        width: 2rem;
-                        margin-right: 0.5rem;
-
-                    }
-
-                    .author img {
-                        border-radius: 100%;
-                        height: 2rem;
-                        width: 2rem;
-                        max-height: 100%;
-                        max-width: 100%;
-                        object-fit: cover;
-                    }
-                </style>
             </div>
         </div>
         {{/each}}
     </div>
+    <style>
+        .button-container {
+            height: auto;
+            width: 100%;
+            display: flex;
+            justify-content: center;
+        }
+
+        button {
+            cursor: pointer;
+            border: none;
+            background: crimson;
+            color: white;
+            width: 40vw;
+            min-width: 300px;
+            min-height: 50px;
+            height: 10vh;
+            font-weight: bold;
+            font-size: 150%;
+            margin: 5% auto;
+            position: relative;
+            transition: all 0.3s ease-in-out;
+        }
+
+        button:hover {
+            background-color: rgb(220, 20, 80);
+            border: 1px solid rgba(46, 184, 218, 0.63);
+        }
+
+        button:focus {
+            outline: none;
+
+        }
+
+
+        strong {
+            font-weight: bold;
+        }
+
+        .info {
+            object-fit: cover;
+            display: flex;
+            flex-flow: column;
+            justify-content: space-between;
+            position: relative;
+            min-height: 37%;
+        }
+
+        .author {
+            font-size: 80%;
+            color: white;
+            display: flex;
+            flex-flow: row;
+            justify-content: ;
+            align-items: center;
+        }
+
+        .author_container {
+            height: 2rem;
+            width: 2rem;
+            margin-right: 0.5rem;
+
+        }
+
+        .author img {
+            border-radius: 100%;
+            height: 2rem;
+            width: 2rem;
+            max-height: 100%;
+            max-width: 100%;
+            object-fit: cover;
+        }
+    </style>
 </section>
 <div class="button-container">
     <button id="gimmi">MÁS NOTICIAS!</button>
@@ -197,13 +197,13 @@
                     let img_container = document.createElement('div');
                     img_container.classList.add('img-container');
                     let link = document.createElement('a');
-                    link.href = `/news/${e.url}`;
+                    link.href = `/contents/news/${e.url}`;
                     let image = document.createElement('img');
                     image.src = e.thumbnail;
                     let info = document.createElement('div');
                     info.classList.add('info');
                     let link2 = document.createElement('a');
-                    link2.href = `/news/${e.url}`;
+                    link2.href = `contents/news/${e.url}`;
                     let title = document.createElement('h2');
                     title.classList.add('article-title');
                     title.appendChild(document.createTextNode(e.title));
