Changed main.hbs in layout
+Fixed favicon source that was causing conflicts because a missing "/".

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -22,7 +22,7 @@
     <title>{{{headers.pageTitle}}}</title>
 
     <!--Import Google Icon Font-->
-
+    <link rel="shortcut icon" href="/faviconOjo1.jpeg" type="image/jpeg">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Anton&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
