--- a/src/public/content.css
+++ b/src/public/content.css
@@ -314,7 +314,7 @@ a {
     }
 }
 
-.article .body p {
+.article .body p, .article .body a {
     position: relative;
     max-width: 85%;
     line-height: 1.6rem;
@@ -323,6 +323,12 @@ a {
     margin-block-end: 3%;
     margin-bottom: 3%;
     text-rendering: optimizeLegibility;
+    word-break: break-word;
+
+}
+
+.article .body a{
+    color: crimson
 }
 
 .article .body div {
